# Evidence-Holonomy

./: .gitignore  ATTRIBUTIONS.md  CURRENT_PLAN.md  LICENSE  README.md  README_data.md  REPORT.md  UEC_Holonomy_Proof_and_Experiments.ipynb  pyproject.toml  test_results_summary.md  uec_battery.py  uec_theory.tex
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
anc/: README_anc.md  code_invariance_kt.csv  code_invariance_lz78.csv  code_invariance_merged.csv  markov_sanity.csv
background/: 01_uec_overview.md  02_related_work.md  03_applications_and_agents.md  README.md  background.md  lit_review.md  trading_and_agents.md
data/: examples.md
docs/: assumptions.md
scripts/: generate_test_videos.py  generate_test_wav.py  package_arxiv.sh  plot_results.py  reproduce_all.sh  summarize.py
scripts/analysis/: basis_selection_test.py  channel_space_mapping.py  decoherence_time_test.py  holonomy_mixing_curve.py  uec_diagnostics.py
scripts/benchmarks/: uec_bench.py
scripts/finance/: btc_uec_analysis.py  uec_multiscale.py  uec_sensitivity.py
scripts/quantum/: holonomy_channel_sweep.py  quantum_decoherence_holonomy.py  quantum_density_matrix_holonomy.py  uec_quantum_analysis.py
src/uec/: __init__.py  adapters.py  aot.py  bio.py  cli.py  coders.py  holonomy.py  markov.py  transforms.py
tests/: conftest.py  test_adapters.py  test_aot.py  test_cli.py  test_coders.py  test_holonomy.py  test_holonomy_loops.py  test_markov.py  test_transforms.py  test_uec_battery.py
